.playstructure/kubernetes/common/ingress/sample-dotnet-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-dotnet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: sample-dotnet
  rules:
  - host: sample-dotnet.playstructure.dev
    http:
      paths:
      - path: /
        backend:
          service:
            name: sample-dotnet
            port:
              number: 80
